# Coder

./: .gitattributes  .gitignore  .symbols.db  CHANGELOG.md  CLAUDE.md  README.md  conftest.py  install.ps1  install.sh  main.py  pyproject.toml  requirements.txt
Coder/: .gitignore  CLAUDE.md  conftest.py  main.py  pyproject.toml
Coder/config/: settings.py
Coder/docs/: professional-agent-roadmap.md
Coder/evals/: checks.py  harness.py  tasks.py
Coder/prompts/: system.md
Coder/tests/: test_agent.py  test_file_flow.py  test_multifile.py  test_rag.py  test_skills.py  test_streaming.py  test_symbols.py  test_verify.py
app/agent/: buildspec.py  context_budget.py  core.py  executor.py  planner.py  recovery.py  references.py  tool_registry.py  verify.py  vision.py
app/cli/: commands.py  repl.py
app/database/: sqlite_db.py  vector_store.py
app/mcp/: client.py  manager.py
app/memory/: project_memory.py
app/models/: llm.py
app/rag/: chunker.py  embedder.py  retriever.py  symbols.py  watcher.py
config/: settings.py
docs/: execution-roadmap.md  improvement-suggestions.md  multi-task-handling.md  professional-agent-roadmap.md  weaknesses.md
evals/: __init__.py  run.py  tasks.py
prompts/: system.md  tool_call.md
tests/: test_agent.py  test_approval.py  test_buildspec.py  test_context_budget.py  test_diff_preview.py  test_evals.py  test_file_flow.py  test_model_command.py  test_multifile.py  test_multitask.py  test_nav_consistency.py  test_no_import_side_effects.py  test_observability.py  test_packaging.py  test_path_jail.py  test_permissions.py  test_prompt_injection.py  test_rag.py  test_references.py  test_reindex.py  test_safe_writes.py  test_streaming.py  test_symbols.py  test_tools.py  test_verify.py  test_vision.py  test_watcher.py
(+31 files in other folders)
